# KFramework

./: pyproject.toml
kframework/: __init__.py
kframework/distance/: __init__.py  minkowski.py  protocols.py
kframework/init/: __init__.py  fcm_init.py  forgy.py  kmeans_init.py  kplusplus.py  random_partition.py  random_tags.py
kframework/model/: __init__.py  fcm.py  lloyd_centroids.py  lloyd_kmeans.py  lloyd_kmedians.py  protocols.py
kframework/stop/: __init__.py  attribute_sensitivity_stop.py  centroid_change.py  computed_sensitivity_stop.py  max_iter.py  stop_rule.py  tags_sensitivity.py  variance_change.py
kframework/utils/: __init__.py  protocols.py  random_generator.py
