[tool.poetry]
name = "kframework"
version = "0.1.0"
description = "Easy to use and highly customizable Kmeans and FCMeans numpy implementations"
authors = ["clemparpa <clem.parpaillon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
